[gd_scene load_steps=14 format=3 uid="uid://dcaht4b005pg3"]

[ext_resource type="Script" path="res://characters/guest.gd" id="1_imcqi"]
[ext_resource type="Texture2D" uid="uid://dxwatj4leehnh" path="res://characters/character_4.png" id="1_nrfck"]
[ext_resource type="AnimationLibrary" uid="uid://c2vcyrh0g8j2o" path="res://characters/character_anim_library.res" id="3_ha784"]
[ext_resource type="AudioStream" uid="uid://dnew81bltcbou" path="res://characters/sfx/sad_01.mp3" id="4_6fypr"]
[ext_resource type="AudioStream" uid="uid://0sya7ntkbs2c" path="res://characters/sfx/happy_03.mp3" id="4_aoufa"]
[ext_resource type="AudioStream" uid="uid://cddga7bjcf2yj" path="res://characters/sfx/happy_04.mp3" id="5_cy5sp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phtal"]
size = Vector2(10.5, 8.98041)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igjwi"]
size = Vector2(13.4118, 17.4118)

[sub_resource type="Gradient" id="Gradient_hj80p"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.131127, 0.329144, 0.41482, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uoa7c"]
gradient = SubResource("Gradient_hj80p")
width = 48
height = 48

[sub_resource type="Gradient" id="Gradient_q0hds"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.912289, 0.912289, 0.912289, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5xrxo"]
gradient = SubResource("Gradient_q0hds")
width = 10
height = 10

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_k5h20"]
random_pitch = 1.05
streams_count = 2
stream_0/stream = ExtResource("4_aoufa")
stream_1/stream = ExtResource("5_cy5sp")

[node name="Guest" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
scale = Vector2(4.25, 4.25)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_imcqi")

[node name="CupMarker2D" type="Marker2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.84315)
shape = SubResource("RectangleShape2D_phtal")

[node name="CharacterSprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("1_nrfck")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"character_anim_library": ExtResource("3_ha784")
}
speed_scale = 1.66

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.117647, 5.04886e-07)
shape = SubResource("RectangleShape2D_igjwi")
debug_color = Color(0.661482, 0, 0.31907, 0.42)

[node name="SpeechBubbleControl" type="Control" parent="."]
visible = false
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_top = -22.5882
offset_bottom = -22.5882
scale = Vector2(0.235, 0.235)

[node name="TextureRect" type="TextureRect" parent="SpeechBubbleControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_right = 33.5
offset_bottom = 59.0
grow_horizontal = 2
texture = SubResource("GradientTexture2D_uoa7c")

[node name="MarginContainer" type="MarginContainer" parent="SpeechBubbleControl/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="SpeechBubbleControl/TextureRect/MarginContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_5xrxo")

[node name="MarginContainer" type="MarginContainer" parent="SpeechBubbleControl/TextureRect/MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 4

[node name="BubbleRichText" type="RichTextLabel" parent="SpeechBubbleControl/TextureRect/MarginContainer/TextureRect/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
bbcode_enabled = true

[node name="PlaceOrderTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ConsumingOrderTimer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 50.0

[node name="HappynessTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SadAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6fypr")
volume_db = -2.0
pitch_scale = 1.41
bus = &"Sfx"

[node name="HappyAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_k5h20")
volume_db = -3.2
pitch_scale = 1.3

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="PlaceOrderTimer" to="." method="_on_place_order_timer_timeout"]
[connection signal="timeout" from="ConsumingOrderTimer" to="." method="_on_consuming_order_timer_timeout"]
[connection signal="timeout" from="HappynessTimer" to="." method="_on_happyness_timer_timeout"]
